<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.ListMeetingActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_meetings_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_meeting" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/list_meetings_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_add"
        app:tint="@android:color/white"
        app:backgroundTint="@color/red"
        android:contentDescription="@string/add_meeting" />

</FrameLayout>