...

    <TextView
        android:id="@+id/add_meeting_subject_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        app:layout_constraintEnd_toEndOf="@+id/add_meeting_subject_tv"
        app:layout_constraintStart_toStartOf="@+id/add_meeting_subject_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:viewBindingIgnore="true" />

    <EditText
        android:id="@+id/add_meeting_subject_tv"
...
