<resources>
    <string name="app_name">My Meet</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="room">Room</string>
    <string name="_1">1</string>
    <string name="subject">Subject</string>
    <string name="participants">Participants</string>
    <string name="remove_meeting">Remove meeting</string>
    <string name="room_color">Room color</string>
    <string name="_29_11_1990">29/11/1990</string>
...
    <string name="availability_status">Availability status</string>
    <string name="fill_all_fields_message">Please fill all fields</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard_dialog_message">Do you want to discard changes?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="filter">Filter</string>
    <string name="filter_dialog_title">Select dates or rooms to filter :</string>
    <string name="select_date">Select date :</string>
    <string name="select_rooms">Select rooms :</string>
    <string name="all">All</string>
    <string name="clear_filters">Clear filters</string>
    <string name="_10_30_12_00">10:30 AM – 13:00 PM</string>
...
