<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/list_meetings_filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom"
        android:title="@string/filter">
    </item>
</menu>