<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/fd_margin"
    android:paddingHorizontal="@dimen/fd_margin"
    android:id="@+id/dialog_duration_time_picker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/shape_rounded_rectangle"
        >
        <CalendarView
            android:id="@+id/dialog_filter_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fd_margin"
            android:background="@drawable/shape_rounded_rectangle" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/dialog_filter_rooms_cpg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fd_margin"
            app:selectionRequired="true">
            <!--
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Test"
                android:textSize="8sp"/>
            -->
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>
</ScrollView>
